--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -221,7 +221,7 @@ color: white;
 
 /* Features Section */
 .features {
-  padding: 50px 20px;
+  padding: 20px 20px;
   text-align: center;
 }
 
@@ -314,6 +314,8 @@ color: white;
   text-align: left;
   color: #dcdcdc;
   font-family: 'Courier New', monospace;
+  width: 70%;
+  margin:40px auto;
 }
 
 .code-snippet {
