--- a/css/styles.css
+++ b/css/styles.css
@@ -135,13 +135,12 @@ nav {
 textarea {
   width: 100%;
   height: 200px;
-  background-color: #2e2e2e;
+  background-color: #2a2a2a;
   color: white;
-  border: 1px solid #444;
   padding: 10px;
   font-family: 'Courier New', Courier, monospace;
-  border-radius: 0 0 5px 5px; /* Match rounded corners */
-  resize: none; /* Disable resize for uniformity */
+  border-radius: 0 0 5px 5px; 
+  resize: none; 
 }
 
 /* Main heading styling */
