--- a/css/codeDocs-styles.css
+++ b/css/codeDocs-styles.css
@@ -109,7 +109,6 @@ margin-right: -80px;}
   font-size: 20px;
   padding: 5px 10px;
   border-radius: 5px;
-  display: block; /* Ensure links occupy full width */
 }
 
 .sidebar a:hover {
@@ -127,3 +126,99 @@ margin-right: -80px;}
   font-size: 20px; /* Icon size */
   color: blueviolet; /* Icon color */
 }
+.main-bar{
+  margin-top: 100px;
+  color: white;
+}
+.main-heading{
+  font-size: 25px;
+  margin-left: 50px;
+
+}
+.main-heading p{
+  font-size: 25px;
+  color: rgb(174, 174, 174);
+width: 900px;
+margin: auto;
+margin-top: -10px;
+}
+.firstCard{
+  margin-top: 50px;
+  margin-left: 50px;
+}
+.cardHeading{
+  font-size: 22px;
+}
+.cardHeading p{
+  font-size: 20px;
+  color: rgb(191, 190, 190);
+}
+.cardContent{
+  margin-top: 30px;
+  margin-left: 10px;
+}
+.cardContent p{
+  font-size: 20px;
+  width: 740px;
+  color: #adaaaa;
+}
+.html-tag {
+  color: #d73a49;
+  font-weight: bold;
+}
+
+/* Style for HTML attributes */
+.html-attr {
+  color: #f4f68e;
+}
+
+/* Style for attribute values */
+.html-value {
+  color: #8bd7f0;
+}
+
+/* Style for plain text */
+.plain-text {
+  color: #2cbe4e;
+}
+.card{
+  font-size: 17px;
+  background-color: rgb(18, 18, 18);
+  padding: 20px 40px;
+  border: 1px solid gray;
+  border-radius: 15px;
+  margin-top: 20px;
+  position: relative;
+
+}
+.card pre{
+  margin-left: -120px;
+  white-space: pre-wrap; /* Allows code to wrap */
+  word-wrap: break-word; /* Breaks long words if necessary */
+  padding: 15px;
+  border-radius: 8px;
+  overflow: auto;
+}
+.copy-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgb(18, 18, 18);
+  color: rgb(129, 129, 129);
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  cursor: pointer;
+  font-size: 23px;
+}
+
+.copy-btn:hover {
+  background-color: #0056b3;
+}
+.card {
+  padding: 20px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+/* Pre-styling for the code block */
