--- a/css/codeDocs-styles.css
+++ b/css/codeDocs-styles.css
@@ -278,15 +278,16 @@ margin-top: 10px;
 }
 
 .footer{
-height:60px;
-background-color: rgb(88, 87, 87);
-color: white;
-margin-top: 70px;
-display:flex;
-justify-content:center;
-align-items: center;
-font-size: 18px;
-}
+  height:60px;
+  background-color: rgb(30, 30, 30);
+  color: white;
+  margin-top: 100px;
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  font-size: 18px;
+  border-top: 1px solid gray;
+  }
 .first-footer{
   display: flex;
   justify-content: center;
