--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,8 @@ nav {
   position: absolute;
   top: 10px;
   right: 2px; 
+  border-radius: 15px;
+
 }
 
 .menu-icon {
@@ -115,7 +117,7 @@ nav {
   cursor: pointer;
   background: none;
   border: none;
-  width: 35px;
+  width: 32px;
   height: 30px;
   color: white;
   transition: background-color 0.3s ease, transform 0.2s ease;
@@ -125,7 +127,7 @@ nav {
 }
 
 .menu-icon:hover {
-  background-color: rgb(56, 56, 56);
+  background-color: rgb(78, 78, 78);
   border-radius: 15px;
 }
 
